force-app/src/objects/OrderApi__Currency_Conversion_Table__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This table will be referenced to populate the conversion for all BusinessGroups/Stores transactions.</description>
    <fields>
        <fullName>OrderApi__Conversion_Rate__c</fullName>
        <description>Conversion rate of this currency type against source currency</description>
        <inlineHelpText>Conversion rate of this currency type against source currency</inlineHelpText>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Source_Currency_Code__c</fullName>
        <description>ISO code of the source currency. Must be one of the valid alphabetic, three-letter currency ISO codes defined by the ISO 4217 standard, such as USD, GBP, or JPY</description>
        <inlineHelpText>ISO code of the source currency. Must be one of the valid alphabetic, three-letter currency ISO codes defined by the ISO 4217 standard, such as USD, GBP, or JPY</inlineHelpText>
        <label>Source Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Source_Rounding_Setting__c</fullName>
        <description>Rounding values will be decimal numbers. 0.01 to round to the nearest cent; 0.5 to round to the nearest 50 cents; 1 to round to the nearest dollar, 10 to round to the nearest ten dollars, etc. If the value is null, no rounding will be applied.</description>
        <inlineHelpText>Rounding values will be decimal numbers. 0.01 to round to the nearest cent; 0.5 to round to the nearest 50 cents; 1 to round to the nearest dollar, 10 to round to the nearest ten dollars, etc. If the value is null, no rounding will be applied.</inlineHelpText>
        <label>Source Rounding Setting</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Target_Currency_Code__c</fullName>
        <description>ISO code of the target currency. Must be one of the valid alphabetic, three-letter currency ISO codes defined by the ISO 4217 standard, such as USD, GBP, or JPY</description>
        <inlineHelpText>ISO code of the target currency. Must be one of the valid alphabetic, three-letter currency ISO codes defined by the ISO 4217 standard, such as USD, GBP, or JPY</inlineHelpText>
        <label>Target Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Target_Rounding_Setting__c</fullName>
        <description>Rounding values will be decimal numbers. 0.01 to round to the nearest cent; 0.5 to round to the nearest 50 cents; 1 to round to the nearest dollar, 10 to round to the nearest ten dollars, etc. If the value is null, no rounding will be applied.</description>
        <inlineHelpText>Rounding values will be decimal numbers. 0.01 to round to the nearest cent; 0.5 to round to the nearest 50 cents; 1 to round to the nearest dollar, 10 to round to the nearest ten dollars, etc. If the value is null, no rounding will be applied.</inlineHelpText>
        <label>Target Rounding Setting</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <label>Currency Conversion Table</label>
    <listViews>
        <fullName>Fonteva1__All_Rates</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Source_Currency_Code__c</columns>
        <columns>OrderApi__Target_Currency_Code__c</columns>
        <columns>OrderApi__Conversion_Rate__c</columns>
        <columns>OrderApi__Source_Rounding_Setting__c</columns>
        <columns>OrderApi__Target_Rounding_Setting__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Rates</label>
    </listViews>
</CustomObject>